--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -7,39 +7,39 @@
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane fx:id="mainWindow"
-            maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="600.0" prefWidth="400.0"
+            minHeight="400.0" minWidth="450.0"
+            prefHeight="600.0" prefWidth="450.0"
             stylesheets="@../styles/main.css"
             xmlns="http://javafx.com/javafx/17"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="chuck.ui.MainWindow">
     <children>
         <TextField fx:id="userInput"
-                   layoutY="558.0"
                    onAction="#handleUserInput"
                    prefHeight="41.0"
-                   prefWidth="324.0"
                    promptText="Type your message here..."
-                   AnchorPane.bottomAnchor="1.0" />
+                   AnchorPane.bottomAnchor="8.0"
+                   AnchorPane.leftAnchor="8.0"
+                   AnchorPane.rightAnchor="88.0" />
         <Button fx:id="sendButton"
-                layoutX="324.0"
-                layoutY="558.0"
                 mnemonicParsing="false"
                 onAction="#handleUserInput"
                 prefHeight="41.0"
                 prefWidth="76.0"
-                text="Send" />
+                text="Send"
+                AnchorPane.bottomAnchor="8.0"
+                AnchorPane.rightAnchor="8.0" />
         <ScrollPane fx:id="scrollPane"
                     hbarPolicy="NEVER"
                     hvalue="1.0"
-                    prefHeight="557.0"
-                    prefWidth="400.0"
-                    vvalue="1.0">
+                    vvalue="1.0"
+                    AnchorPane.topAnchor="8.0"
+                    AnchorPane.bottomAnchor="65.0"
+                    AnchorPane.leftAnchor="8.0"
+                    AnchorPane.rightAnchor="8.0">
             <content>
                 <VBox fx:id="dialogContainer"
-                      prefHeight="552.0"
-                      prefWidth="388.0" />
+                      minWidth="300.0" />
             </content>
         </ScrollPane>
     </children>
